--- a/lv2lint.1
+++ b/lv2lint.1
@@ -33,6 +33,11 @@ Print version and license information
 Print usage information
 
 .HP
+\fB\-o\fR
+.IP
+Run in offline mode (valid only if online tests were built in at compile time)
+
+.HP
 \fB\-S\fR warn|note
 .IP
 Apart from errors alone, also show warnings (warn) and/or notes (note) on console
