Work on semi-automatic bug-report author mailing.

--- a/lv2lint.1
+++ b/lv2lint.1
@@ -38,6 +38,11 @@ Print usage information
 Run in offline mode (valid only if online tests were built in at compile time)
 
 .HP
+\fB\-m\fR
+.IP
+Create mail to plugin author (valid only if online tests were built in at compile time)
+
+.HP
 \fB\-S\fR warn|note
 .IP
 Apart from errors alone, also show warnings (warn) and/or notes (note) on console
