implement switch to show passed tests.

--- a/lv2lint.1
+++ b/lv2lint.1
@@ -43,14 +43,14 @@ Run in offline mode (valid only if online tests were built in at compile time)
 Create mail to plugin author (valid only if online tests were built in at compile time)
 
 .HP
-\fB\-S\fR warn|note
+\fB\-S\fR warn|note|pass|all
 .IP
-Apart from errors alone, also show warnings (warn) and/or notes (note) on console
+Apart from errors alone, also show warnings (warn), notes (note), passes (pass) or all (all) on console
 
 .HP
-\fB\-E\fR warn|note
+\fB\-E\fR warn|note|all
 .IP
-Apart from errors alone, also treat warnings (warn) and/or notes (note) as errors
+Apart from errors alone, also treat warnings (warn), notes (note) or all (all) as errors
 
 .SH LICENSE
 Artistic License 2.0.
