Test for units:unit in lv2:CV/ControlPort.

--- a/TODO
+++ b/TODO
@@ -64,7 +64,7 @@
 	* Actually instantiate UI
 
 * units
-	* Propose its definition for all control ports and parameters
+	* Propose its definition for all parameters
 
 * urid
 	* DONE
