Add command line switch for extensive docu.

--- a/lv2lint.1
+++ b/lv2lint.1
@@ -33,9 +33,14 @@ Print version and license information
 Print usage information
 
 .HP
+\fB\-d\fR
+.IP
+Show verbose test item documentation
+
+.HP
 \fB\-o\fR
 .IP
-Run in offline mode (valid only if online tests were built in at compile time)
+Run online test items (valid only if online tests were built in at compile time)
 
 .HP
 \fB\-m\fR
