--- a/TODO
+++ b/TODO
@@ -53,9 +53,10 @@
 	* Warn about requiring that feature
 
 * state
-	* Actually load default state if requested
+	* Actually load default state if requested (finalize)
 	* Provide worker to state reload
 	* Provide path functions to state, instantiate
+	* Check whether all patch:writables are initialized with state:loadDefaultState
 
 * time
 	* TODO
@@ -74,3 +75,6 @@
 
 * worker
 	* DONE
+
+* general
+	* escape HTML items in extensive documentation
